fix news on Iphone

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -308,7 +308,7 @@ nav .container, .navbar-brand {
 .mobile-nav {
   display: none;
   position: fixed;
-  top: 100px;
+  top: 55px;
   left: 0;
   width: 100%;
   height: 100%;
